--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                     <img src="https://media1.tenor.com/m/AF5Pm2S8_kAAAAAd/big-hug.gif" alt="Hug Animation" style="max-width: 100%; border-radius: 15px; margin: 20px 0;">
                     <h2>Hug Successfully Delivered! 🫂</h2>
                     <div class="message">
-                        <p>You are wrapped in a warm, virtual embrace filled with love and care! 💖</p>
-                        <p>Remember that you are cherished and valued today and always!</p>
+                        <p>I WISH I COULD HUG YOU IRL BBYYYY! 💖</p>
+                        <p>REMEMBER that you will ALWAYS BE cherished and valued</p>
                     </div>
                 `;
             } else {
@@ -209,11 +209,11 @@
                 
                 // Update loading text based on progress
                 if (width < 30) {
-                    nextText.innerHTML = "<p>Gathering love and warmth...</p>";
+                    nextText.innerHTML = "<p>Gathering ALL THE love and warmthhh...</p>";
                 } else if (width < 60) {
-                    nextText.innerHTML = "<p>Wrapping you in affection...</p>";
+                    nextText.innerHTML = "<p>WRAPPING you in affectionnn...</p>";
                 } else {
-                    nextText.innerHTML = "<p>Almost there! Preparing your special hug...</p>";
+                    nextText.innerHTML = "<p>Almost there! Preparing your special huggg...</p>";
                 }
             }
         }, 40);
